# EvoEMD

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Models/SeesawFreezeIn/: CMakeLists.txt  SeesawTypeI.cpp  SeesawTypeI.h
Models/SeesawFreezeIn/Obsolete/: EMD.h
Models/ToyDM/: Amplitudes.cpp  Amplitudes.h  CMakeLists.txt  ToyDM.cpp  ToyDM.h  ToyDM_FI.cpp  ToyDM_FI.h  ToyDM_FO.cpp  ToyDM_FO.h
Models/ToyLeptogenesis/: Amplitudes.cpp  Amplitudes.h  CMakeLists.txt  Parameters.cpp  Parameters.h  ToyLG.cpp  ToyLG.h
cmake/Modules/: FindCUBA.cmake  FindEVOEMD.cmake
include/: BaseModel.h  CollisionRate.h  EMD.h  EffDOF.h  Hubble.h  LeptogenesisBE.h  LeptogenesisRate.h  Neutrino.h  ParticleFactory.h  Particles.h  PhaseSpace.h  PhysicsParameters.h  Physics_Constants.h  Processes.h  RealTypes.h  RungeKutta.h  spdlog_wrapper.h
include/EvoEMD/: BoltzmannEquation.h  Cache.h  CollisionRate.h  Constants.h  EffDOF.h  EffDofTable.inc  EvoEMD.h  Hubble.h  HubbleBase.h  HubbleEvolution.h  Hubble_Evo.h  LeptogenesisRate.h  Neutrino.h  ParameterBase.h  ParticleBase.h  ParticleFactory.h  ParticlesBase.h  PhaseSpace.h  PhysicsParameters.h  ProcessBase.h  RealTypes.h  RungeKutta.h  spdlog_wrapper.h
include/Models/SeesawFreezeIn/: Parameters.h  Particles.h  Processes.h  SeesawTypeI.h
include/Models/SeesawFreezeIn/Obsolete/: LeptogenesisBE.h  SeesawTypeI.h
include/Models/ToyDM/: Amplitudes.h  Parameters.h  Particles.h  Processes.h
scripts/: rebuild_cuba.sh
src/: BaseModel.cpp  CollisionRate.cpp  EMD.cpp  EffDOF.cpp  Hubble.cpp  LeptogenesisBE.cpp  LeptogenesisRate.cpp  Neutrino.cpp  ParticleFactory.cpp  Particles.cpp  ParticlesBase.cpp  PhaseSpace.cpp  PhysicsParameters.cpp  ReactionRate.cpp  RealTypes.cpp  RungeKutta.cpp
src/EvoEMD/: BoltzmannEquation.cpp  Cache.cpp  CollisionRate.cpp  EffDOF.cpp  EffDOF.cpp_bac  EffDofCalc.cpp  Hubble.cpp  HubbleEvolution.cpp  HubbleSplitting.cpp  Hubble_Evo.cpp  ParameterBase.cpp  ParticleBase.cpp  ParticleFactory.cpp  ParticlesBase.cpp  PhaseSpace.cpp  ProcessBase.cpp  RealTypes.cpp  RungeKutta.cpp
src/Interface/: CalcAmp.m  EvoEMD.m  EvoInit.m  EvoProcess.m
src/Models/SeesawFreezeIn/: CMakeLists.txt  SeesawFI_LG.cpp  SeesawTypeI.cpp
src/Models/SeesawFreezeIn/Obsolete/: LeptogenesisBE.cpp  LeptogenesisRate.cpp  Neutrino.cpp
src/Models/ToyDM/: Amplitudes.cpp  ToyDM.cpp
test/: CMakeLists.txt  Cache_index_test.cpp  EvoEMD_CalcAmp_Test.nb  EvoEMD_Model_Test.evo  Hubble_History_test.cpp  Hubble_in_EMD.cpp  Hubble_rho_in_EMD.cpp  Neutrino_Test.cpp  Particle_Test.cpp  RungeKutta_Test.cpp  Set_Test.cpp
