CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12 FATAL_ERROR)
if (POLICY CMP0042)
  cmake_policy(SET CMP0042 NEW)
endif ()
PROJECT(EVOEMD CXX)

SET(EVOEMD_VERSION "0.6.1")

FIND_PACKAGE(GSL 2.1 REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
SET(CUBADIR "/Users/ycwu/Workingspace/Utilities/Cuba-4.2")
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR} ${GSL_INCLUDE_DIRS} ${CUBADIR} include)
LINK_DIRECTORIES(${CUBADIR})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unknown-warning-option")

## Collecting Source Files
FILE(GLOB lib_SOURCES src/EvoEMD/*.cpp)


# For .so/.dylib library
ADD_LIBRARY(EVOEMD_shared SHARED ${lib_SOURCES})
SET_TARGET_PROPERTIES(EVOEMD_shared PROPERTIES
    LINKER_LANGUAGE CXX
    VERSION ${EVOEMD_VERSION}
    OUTPUT_NAME EVOEMD
)
TARGET_LINK_LIBRARIES(EVOEMD_shared ${GSL_LIBRARIES} cuba)
SET(EVOEMD_LIBRARY EVOEMD_shared)

add_subdirectory(src/Models/SeesawFreezeIn)
add_subdirectory(src/Models/ToyDM)
# add_subdirectory(test)
