CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12 FATAL_ERROR)
if (POLICY CMP0042)
  cmake_policy(SET CMP0042 NEW)
endif ()
if (POLICY CMP0074)
  cmake_policy(SET CMP0074 NEW)
endif ()
PROJECT(EVOEMD CXX)

SET(EVOEMD_VERSION "1.0.1")

FIND_PACKAGE(GSL 2.0 REQUIRED) # we need steffen interpolation
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules;${CMAKE_MODULE_PATH}")
FIND_PACKAGE(CUBA REQUIRED)
INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS} ${CUBA_INCLUDE_DIRS} include)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unknown-warning-option")

## Collecting Source Files
FILE(GLOB lib_SOURCES src/EvoEMD/*.cpp)

# For .so/.dylib library
ADD_LIBRARY(EVOEMD_shared SHARED ${lib_SOURCES})
SET_TARGET_PROPERTIES(EVOEMD_shared PROPERTIES
    LINKER_LANGUAGE CXX
    VERSION ${EVOEMD_VERSION}
    OUTPUT_NAME EVOEMD
)
TARGET_LINK_LIBRARIES(EVOEMD_shared ${GSL_LIBRARIES} ${CUBA_LIBRARIES})
SET(EVOEMD_LIBRARIES EVOEMD_shared)

# CUBA has to be recompiled with -fPIC so that it can be linked into a shared library.
ADD_CUSTOM_COMMAND(
    TARGET EVOEMD_shared
    PRE_BUILD
    COMMAND ${CMAKE_SOURCE_DIR}/scripts/rebuild_cuba.sh
    WORKING_DIRECTORY ${CUBA_ROOT}
)
# For .a library
# ADD_LIBRARY(EVOEMD_static STATIC ${lib_SOURCES})
# SET_TARGET_PROPERTIES(EVOEMD_static PROPERTIES
#     LINKER_LANGUAGE CXX
#     VERSION ${EVOEMD_VERSION}
#     OUTPUT_NAME EVOEMD
# )
# TARGET_LINK_LIBRARIES(EVOEMD_static ${GSL_LIBRARIES} ${CUBA_LIBRARIES})
# SET(EVOEMD_LIBRARIES EVOEMD_static)

# Installation

SET(EVOEMD_INSTALL_LIB EVOEMD_shared)
INSTALL(TARGETS ${EVOEMD_INSTALL_LIB} DESTINATION lib)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/cmake/Modules/FindEVOEMD.cmake DESTINATION share/cmake/Modules)
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/include/EvoEMD DESTINATION include)
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/include/spdlog DESTINATION include)


add_subdirectory(Models/ToyDM)
add_subdirectory(Models/ToyLeptogenesis)
